syntax = "proto3";

option go_package = "github.com/vazj/blocker/proto";

service Node {
    rpc Handshake (Version) returns (Version);
    rpc HandleTransaction (Transaction) returns (Ack);
}

message Version {
    string version = 1;
    int32 height = 2;
    string listenAddr = 3;
    repeated string peerList = 4;
}

message Ack {}

message Block {
    Header Header = 1;
    repeated Transaction Transactions = 2;
    bytes publicKey = 3;
    bytes signature = 4;
}

message Header {
    int32 Version = 1;
    int32 Height = 2;
    bytes PrevHash = 3;
    bytes rootHash = 4; // merkle root hash
    int64 Timestamp = 5;
}

message TxInput {
    // the hash of the transaction that contains the output which we want to spend
    bytes prevTxHash = 1;
    // the index of the output in the previous transaction that we want to spend
    uint32 prevOutIndex = 2;
    bytes publicKey = 3;
    bytes signature = 4;
}

message TxOutput {
    // the value of the output
    int64 amount = 1;
    // the address of the recipient
    bytes address = 2;
}

message Transaction {
    int32 version = 1;
    repeated TxInput inputs = 2;
    repeated TxOutput outputs = 3;
}

